MARP-760 Handle Sonar