@@ -425,7 +425,7 @@ class VersionServiceImplTest {
 
     List<VersionAndUrlModel> result = versionService.getVersionsForDesigner("11.3.0");
 
-    Assertions.assertEquals(result.stream().map(VersionAndUrlModel::getVersion).collect(Collectors.toList()),
+    Assertions.assertEquals(result.stream().map(VersionAndUrlModel::getVersion).toList(),
         List.of("11.3.0", "11.1.1", "11.1.0", "10.0.2"));
     Assertions.assertEquals("/api/product-details/productjsoncontent/11.3.0/11.3.0", result.get(0).getUrl());
     Assertions.assertEquals("/api/product-details/productjsoncontent/11.3.0/11.1.1", result.get(1).getUrl());
